tests/snapshots/integration__integration_tests__jj__jj_merge_no_net_changes_with_remove.snap
---
source: tests/integration_tests/jj.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[36m◎[39m [36mGenerating squash commit message...[39m
[2m↳[22m [2mUsing [CHANGE_ID_SHORT] commit message. For LLM setup guide, run [90mwt config --help[39m[22m
[107m [0m [1mSquash commits from main[22m
[107m [0m 
[107m [0m Combined commits:
[107m [0m - Add temp file
[107m [0m - Remove temp file
[32m✓[39m [32mSquashed @ [2m[CHANGE_ID][22m[39m
[32m✓[39m [32mSquashed workspace [1mnoop2[22m into [1mmain[22m[39m
[32m✓[39m [32mRemoved workspace [1mnoop2[22m @ [1m_REPO_.noop2[22m ([CHANGE_ID_SHORT] of [1mmain[22m, [2m⊂[22m)[39m
