tests/snapshots/integration__integration_tests__jj__jj_remove_already_deleted_directory.snap
---
source: tests/integration_tests/jj.rs
assertion_line: 992
info:
  program: wt
  args:
    - remove
    - deleted
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WT_TEST_DELAYED_STREAM_MS: "-1"
    WT_TEST_EPOCH: "1735776000"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[33m▲[39m [33mWorkspace directory already removed: [1m_REPO_.deleted[22m[39m
[32m✓[39m [32mRemoved workspace [1mdeleted[22m @ [1m_REPO_.deleted[22m[39m
